@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto
skinparam classAttributeIconSize 0
'left to right direction



class Skill {
    - String skillName
    + Skill(skillName)
    - validateSkillName(skillName)
'    + Skill(reference, description,\ninformalDescription, technicalDescription,\nduration, cost, createdBy, taskCategory)
}



class SkillRepository {
    + registerSkill(skillName)
    - addSkill(skill)
    - validateSkill(skill)
}



class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getSkillRepository()
}

class RegisterSkillController {
    + RegisterSkillController(skillRepository)
    + registerSkill(skillName)
}

class RegisterSkillUI {
}

RegisterSkillUI .> RegisterSkillController

RegisterSkillController .> Repositories : repositories
Repositories  --> "1 " SkillRepository
Repositories -> Repositories : instance

RegisterSkillController ..>  SkillRepository : skillRepository

SkillRepository  --> "1  " Skill : register

@enduml